Illegal reflective access by com.sun.mail.util.SocketFetcher #124 (#126)
Illegal reflective access by com.sun.mail.util.SocketFetcher #124
Original hostname tests and property names from icu5545.
Co-authored-by: icu5545 <3522659+icu5545@users.noreply.github.com>
Signed-off-by: jmehrens <jason_mehrens@hotmail.com>